--- a/style.css
+++ b/style.css
@@ -2,78 +2,78 @@
 
 body {width:100%;
 
-		margin: 0;
-		font-family: Helvetica, sans-serif;
-	  }
+	margin: 0;
+	font-family: Helvetica, sans-serif;
+  }
 
 /*navbar*/
 p{font-size: 1.3em;}
 
 nav{
-	
-	background-color: transparent;
-	position: fixed;
-	top: 0;
-	width: 100%;}
+
+background-color: transparent;
+position: fixed;
+top: 0;
+width: 100%;}
 .topnav #first{border: 1.8px solid black; 
-	border-radius: 25px;
-	padding: 10px 16px;
-	text-align: center;
-	background-color: white;
+border-radius: 25px;
+padding: 10px 16px;
+text-align: center;
+background-color: white;
 }
 .topnav a 
 {margin: 2%!important;
-		float: left;
-		text-decoration: none;
-		font-size: 1em;
-		color:black;
-		text-decoration: none;
-	  }
-	  
+	float: left;
+	text-decoration: none;
+	font-size: 1em;
+	color:black;
+	text-decoration: none;
+  }
+  
 
 .split {margin:2%;
-		float: right;
-		
+	float: right;
+	
 
-	  }
+  }
 .dropdown-menu-right{color: black !important; 
-	 border: 1.8px solid black; 
-	 border-radius: 25px;
-	padding: 10px 16px;
-	background-color: white !important; 
-	text-align: right !important;}
+ border: 1.8px solid black; 
+ border-radius: 25px;
+padding: 10px 16px;
+background-color: white !important; 
+text-align: right !important;}
 
 
 
 .bar1, .bar2, .bar3 {
-		width: 40px;
-  	height: 6px;
- 	 background-color: white;
-	 border: 1.8px solid black;
- 	 border-radius:25px;
- 	 margin: 6px 0;
- 	 transition: 0.4s;
-	  }
-	  
+	width: 40px;
+  height: 6px;
+  background-color: white;
+ border: 1.8px solid black;
+  border-radius:25px;
+  margin: 6px 0;
+  transition: 0.4s;
+  }
+  
 .change .bar1 {
-		transform: translate(0, 11px) rotate(-45deg);
-	  }
-	  
+	transform: translate(0, 11px) rotate(-45deg);
+  }
+  
 .change .bar2 {opacity: 0;}
-	  
+  
 .change .bar3 {
-		transform: translate(0, -11px) rotate(45deg);}
+	transform: translate(0, -11px) rotate(45deg);}
 
 .dropdown-toggle::after {
-			width: 0;
-			height: 0;
-			margin-left: 0;
-			
-			border-top: 0;
-			border-right: 0;
-			border-bottom: 0;
-			border-left: 0;
-		}
+		width: 0;
+		height: 0;
+		margin-left: 0;
+		
+		border-top: 0;
+		border-right: 0;
+		border-bottom: 0;
+		border-left: 0;
+	}
 
 /*main*/
 .content{margin: 0 7%;}
@@ -85,76 +85,133 @@ padding:25% 8%}
 font-weight: 550;}
 
 #secondSection div{text-align: center;
-	padding:5%;
+padding:5%;
 
-	border:1px solid black;
-	border-radius: 20px;
-	box-shadow: inset;
+border:1px solid black;
+border-radius: 20px;
 
-	}
-
+}
 
 
-#thirdSection{display:flex;
-flex-direction: row;
-flex-wrap: wrap;
-padding-top:2%;
-gap:2.5%; 
-
-height:100vh;}
-
-
-#thirdSection div{flex:30%}
+#thirdSection {
+	display: flex;
+	flex-wrap: wrap;
+	padding-top: 5%;
+	padding: 10% 0;
+	box-sizing: border-box; /* Ensures padding is included in width */
+  }
+  
+  #thirdSection div {
+	flex: 1 1 calc(65% - 20px); /* Adjust div width to leave space for the image */
+	padding-right: 20px; /* Add some spacing between divs */
+	box-sizing: border-box; /* Ensures padding is part of the width */
+  }
+  
+  #thirdSection img {
+	flex: 1 1 auto; 
+	width: 35%; /* Set fixed image width */
+	height: auto; /* Maintain aspect ratio */
+	padding: 10px; /* Add some padding around the image */
+	box-sizing: border-box; /* Ensures padding is part of the width */
+  }
+  
 
 h2{font-size: 2.5em;
 padding-bottom: 2%;}
-#thirdSection img{flex:5%;
 
-	width:5%
-}
 
-#disclamer{color:rgb(96, 96, 96)
-}
 
-.datasets{display:flex;
-	flex-direction: row;
-	gap:1%;
-	flex-wrap: wrap;
-	align-items: center;
+.datasets{margin-top: 3%;
+display:flex;
+flex-direction: row;
+gap:3%;
+flex-wrap: wrap;
+align-items: center;
 }
 
 .dataset{border:1px solid black;
-	font-size: small;
-	padding:5%;
-	border-radius: 20px;
+font-size: small;
+padding:5%;
+border-radius: 20px;
 }
 
 
 #fifthsection{padding:  7% 0}
 
-.tab-pane{border:1px solid black;
-border-bottom-left-radius: 20px;
-border-bottom-right-radius: 20px;
-padding: 4% 5%}
-
-
-.nav-link .active{border:1px solid black;
-	border-radius: 30px !important;
-
+/* tabs */
+.nav-tabs {
+margin-top: 3%;
 }
+
+.nav-tabs .nav-link {
+border-radius: 20px;
+border: 1px solid black;
+padding: 10px 20px;
+margin-right: 1%;
+text-align: center;
+text-transform: uppercase;
+background-color: #fff;
+color: black;
+transition: all 0.3s ease; 
+}
+
+.nav-tabs .nav-link:hover {
+background-color: red; 
+color:white
+}
+
+.nav-link {
+margin-bottom: 0.5%;
+}
+
+.nav-tabs .nav-link.active {
+margin-bottom: -1px; 
+border-radius: 15px 15px 0 0;
+border: 1px solid black;
+color: #000;
+z-index: 1;
+position: relative;
+background-color: white; 
+border-bottom: 1px solid white; 
+}
+
+.tab-content {
+padding: 4% 5%;
+border: 1px solid black;
+border-radius: 0 10px 10px 10px;
+margin-top: -1px; 
+background-color: white;
+}
+
+.nav-tabs .nav-link.active:focus,
+.nav-tabs .nav-link.active:active {
+outline: none; 
+border-bottom: 1px solid white; 
+}
+
+h3 {
+margin-bottom: 1rem; 
+}
+
+p {
+line-height: 1.6; 
+}
+
+
+
 
 /*responsive*/
 @media only screen and (max-width: 426px) {
-	#firstSection h1{font-size: 3em;
-	font-weight: 550;
+#firstSection h1{font-size: 3em;
+font-weight: 550;
 padding-top:10%}
-	
-	#firstSection h2{font-size: 1.5em;
+
+#firstSection h2{font-size: 1.5em;
+	}
+
+#thirdSection{display:flex;
+		flex-direction: column;
 		}
 
-	#thirdSection{display:flex;
-			flex-direction: column;
-			}
-
-	#thirdSection img{width:100%}		
+#thirdSection img{width:100%}		
 }
