--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ border-radius: 20px;
   }
   
   #thirdSection div {
-	flex: 1 1 calc(65% - 20px); 
+	flex: 1 1 calc(60% - 20px); 
 	padding-right: 20px; 
 	box-sizing: border-box; 
   }
@@ -473,12 +473,21 @@ padding-top:10%}
 
 
 /*visualizaton*/
-#VisualizationLaw{display: flex;
-	flex-direction:row;}
+#VisualizationLaw{ display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap:2%;
+  margin-top:5%}
 	
 
-#mapSection{display: flex;
+#mapSection{flex:30%;
+  display: flex;
 flex-direction:column;}
+
+
+#allInfo{display: flex;
+	flex-direction: row;
+	align-items: center;
+  padding-bottom:1.5%;}
 
 #slider {
 	display: flex;
@@ -487,7 +496,8 @@ flex-direction:column;}
 	width: 60%; 
 	border:1px solid black;
 	border-radius: 20px;
-	padding:1.5%
+	padding:1.5%;
+
   }
   
 #sliderInfo{display: flex;
@@ -495,8 +505,28 @@ flex-direction:column;}
 	align-items: center;
 	width:100%;
 }
+
+#country{border:1px solid black;
+	border-radius: 20px;
+  align-items: center;
+  display: flex;
+	flex-direction: row;
+	padding:1.5%;
+  width:19%;
+  margin-right:1.5%
+
+  }
+
+#countryName{font-size:1em;
+  text-transform:uppercase;
+margin:0;
+
+font-weight:600;
+}
   
-label{margin-right:3%}
+label{margin:0 1% 0 0}
+#selectedYear{margin-left:1%;
+  font-weight:600;}
 
 #yearSlider {
 	width: 100%;
@@ -531,6 +561,32 @@ label{margin-right:3%}
 	cursor: pointer;
 	transition: 0.3s, transform 0.2s;
   }
+
+#countryDetails{border:1px solid black;
+  border-radius: 20px;
+  padding:2%;
+  }
+
+#countryDetails h2{
+  
+font-size: 20px;
+font-weight: 600;
+}
+
+
+#infoTable {
+    margin-top: 20px;
+  }
+
+.fa {
+    font-size: 18px;
+  }
+  .text-success {
+    color: green;
+  }
+  .text-danger {
+    color: red;
+  }
   
 svg{border:1px solid black;
 border-radius: 20px;}
@@ -539,12 +595,6 @@ border-radius: 20px;}
 	stroke: rgba(0, 0, 0, 0.744);
 	stroke-width: 0.5;
 	cursor: pointer;
-  }
-
-  
-
-  .country-info {
-	margin-top: 20px;
   }
 
 
