--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ flex-direction:column;}
   display: flex;
 	flex-direction: row;
 	padding:1.5%;
-  width:19%;
+  width:25%;
   margin-right:1.5%
 
   }
@@ -567,16 +567,21 @@ label{margin:0 1% 0 0}
   padding:2%;
   }
 
-#countryDetails h2{
-  
+#countryDetails h3{
+  margin-block-end: 0;
 font-size: 20px;
 font-weight: 600;
+padding:5% 5% 0% 5%}
+
+#countryDetails thead tr{text-align: center;}
+#countryDetails .table thead th {
+  vertical-align: bottom;
+  border-bottom: none;
+  margin: 0;
 }
 
+th,td{border:none}
 
-#infoTable {
-    margin-top: 20px;
-  }
 
 .fa {
     font-size: 18px;
