--- a/style.css
+++ b/style.css
@@ -591,6 +591,7 @@ label{margin:0 1% 0 0}
   padding:2%;
   }
 
+#countryInfo{opacity:0}
 #countryDetails h3{
   margin-block-end: 0;
 font-size: 20px;
