correction to background image

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ text-align: right !important;}
 
 #firstSection{height:140vh;
 padding:30% 8%;
-background-image: url("imgs/homebackground.png");
+background-image: url("homebackground.png");
 
   background-position: center;
   background-repeat: no-repeat;
