--- a/style.css
+++ b/style.css
@@ -795,3 +795,78 @@ option {
 #equality-table tr, #equality-table tr{
   font-size: 17px;
 }
+
+
+
+#eigthSection {
+  margin: 3% 5%;
+  font-family: Arial, sans-serif;
+  line-height: 1.6em;
+}
+
+#eigthSection h2 {
+  margin-bottom: 20px;
+  color: #333;
+  padding-bottom: 10px;
+}
+
+#eigthSection h3 {
+  margin-top: 20px;
+  color: #444;
+}
+
+#eigthSection p {
+  color: #555;
+  margin: 10px 0;
+}
+
+#eigthSection strong {
+  color: #000;
+}
+
+#eigthSection em {
+  font-style: italic;
+
+}
+
+.dataset-block {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 3%;
+  margin: 20px 0;
+}
+
+.dataset-block h3 {
+  margin-top: 0;
+}
+
+.dataset-block:nth-child(even) {
+  background-color: #fff;
+}
+
+.project-note {
+  background-color: #fffbec;
+  border-left: 5px solid #ffd700;
+  padding: 2% 3% 3% ;
+  color: #555;
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  #eigthSection {
+    margin: 5%;
+  }
+
+  #eigthSection h2 {
+    font-size: 2em;
+  }
+
+  #eigthSection h3 {
+    font-size: 1.5em;
+  }
+
+  #eigthSection p {
+    font-size: 1em;
+  }
+}
