--- a/style.css
+++ b/style.css
@@ -700,9 +700,10 @@ padding:5% 5% 0% 5%}
 
 th,td{border:none}
 
+.x{font-size:15px}
 
 .fa {
-    font-size: 18px;
+    font-size: 20px;
   }
   .text-success {
     color: green;
