--- a/style.css
+++ b/style.css
@@ -900,7 +900,7 @@ padding: 0}
   #sliderInfo2 input{width:100%;
 }
 
-
+#VisualizationViolence label{padding-right:3%}
 
 #VisualizationViolence #country p{margin-left: 1%;
   font-weight: 600;
