aesthetic changes to violence chart

--- a/style.css
+++ b/style.css
@@ -919,3 +919,7 @@ padding: 0}
 font-size: medium;}
 
 #countryName2{text-transform: uppercase;}
+
+
+#country-hate-crime-select{width:20%}
+#hate-crime-line-chart{width:100%}
