--- a/style.css
+++ b/style.css
@@ -601,10 +601,10 @@ ul li{font-size:1.25rem ;}
 
 #textVisualisation h3{font-size: 1.2rem} 
 a{text-decoration: none;
-  color:green;
-font-weight:550;}
+  color:black;
+}
 a:hover{text-decoration: none;
-  color:green}
+  }
 
 #legend{
 margin:2% 5%;
